Ticket #28924: Create toJson() TLScript function.
- add documentation and test cases

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -663,6 +663,8 @@ com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pd
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pdf2txt-executable.tooltip = Das im System installierte ausführbare Programm, das für die Konvertierung von PDF in Text aufgerufen wird.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable = Tesseract ausführbar
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable.tooltip = Das im System installierte ausführbare Programm für OCR.
+com.top_logic.model.search.expr.config.operations.binary.ToJson$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ToJson$Builder.tooltip = <i>Einfacher Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>JSON-Methoden</i>.
 com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Unzip-Ausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.binary.ZipArchive$Builder = Ersteller
