--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -663,6 +663,8 @@ com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pd
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.pdf2txt-executable.tooltip = The system-installed executable program to call for PDF to text conversion.
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable = Tesseract executable
 com.top_logic.model.search.expr.config.operations.binary.Pdf2Txt.GlobalConfig.tesseract-executable.tooltip = The system-installed executable program for OCR.
+com.top_logic.model.search.expr.config.operations.binary.ToJson$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.ToJson$Builder.tooltip = <i>Simple method builder</i> creating <i>to JSON</i> methods.
 com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.Unzip$Builder.tooltip = <i>Method builder</i> creating <i>unzip</i> expressions.
 com.top_logic.model.search.expr.config.operations.binary.ZipArchive$Builder = Builder
