Ticket #28931: Cleanup: Report existing roles, if a role is not found.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -1,3 +1,5 @@
+class.com.top_logic.element.boundsec.manager.I18NConstants.AUTHORIZATION_PROBLEM_UNKNOWN_ROLE = Rolle {1} für Klassifizierung {0} nicht gefunden (verfügbare Rollen: {2}). Die Regel wird nicht verwendet.
+class.com.top_logic.element.boundsec.manager.I18NConstants.ROLE_RULES_PROBLEM_UNKNOWN_ROLE = Die Rolle {0} ist nicht vorhanden. Verfügbare Anwendungsrollen sind {1}, verfügbare globale Rollen sind {2}. Die entsprechende Regel wird ignoriert.
 class.com.top_logic.element.changelog.I18NConstants.CONFLICTS_WHEN_UNDO_REVISION__REV = Die Fachobjekte sind seit "{0}" geändert worden. Soll die ursprüngliche Änderung trotzdem rückgängig gemacht werden?
 class.com.top_logic.element.changelog.I18NConstants.UNDO_CANCELED_BY_USER = Der Benutzer hat die Rückgängigmachung aufgrund von widersprüchlichen Änderungen abgebrochen.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Die für die Eigenschaft "{1}" des Objekts "{0}" eingestellten Werte "{2}" sind nicht mehr verfügbar (inzwischen gelöscht), der Wert wird auf "{3}" gesetzt.
