--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -1,3 +1,5 @@
+class.com.top_logic.element.boundsec.manager.I18NConstants.AUTHORIZATION_PROBLEM_UNKNOWN_ROLE = Role {1} for classification {0} not found (available roles: {2}). The rule is not used.
+class.com.top_logic.element.boundsec.manager.I18NConstants.ROLE_RULES_PROBLEM_UNKNOWN_ROLE = The role {0} does not exist. Available application roles are {1}, available global roles are {2}. The corresponding rule is ignored.
 class.com.top_logic.element.changelog.I18NConstants.CONFLICTS_WHEN_UNDO_REVISION__REV = The business objects have been modified since "{0}". Should the original change still be reverted?
 class.com.top_logic.element.changelog.I18NConstants.UNDO_CANCELED_BY_USER = The user canceled the undo due to conflicting changes.
 class.com.top_logic.element.changelog.model.I18NConstants.PROBLEM_OBJECTS_NO_LONGER_EXIST__OBJ_PART_MISSING_MERGED = Values "{2}" set to the property "{1}" of object "{0}" are no longer available (deleted in the meantime), setting value to "{3}".
