Ticket #28927: Implement Excel file generation in TL-Script.
- Added funtionality with TL-Script functions: excelFile(),
excelSheet(), excelCell(), excelFormula()
- added documentation
- added test case

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -645,6 +645,14 @@ com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder = 
 com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder.tooltip = <i>Methodenersteller</i> für <i>base64encode</i>.
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip = <i>Methodenersteller</i> zur Erstellung von <i>Binärdaten</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelCell$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ExcelCell$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Zellen</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelFile$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ExcelFile$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Dateien</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Formeln</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Tabellen</i>.
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Instanz-Export-Ausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder = Ersteller
