--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -645,6 +645,14 @@ com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder = 
 com.top_logic.model.search.expr.config.operations.binary.Base64Encode$Builder.tooltip = <i>Method builder</i> for <i>base64encode</i>.
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.Binary$Builder.tooltip = <i>Method builder</i> creating <i>binary</i> data.
+com.top_logic.model.search.expr.config.operations.binary.ExcelCell$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.ExcelCell$Builder.tooltip = <i>Method builder</i> for <i>Excel cell</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelFile$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.ExcelFile$Builder.tooltip = <i>Method builder</i> for <i>Excel file</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder.tooltip = <i>Method builder</i> for <i>Excel formula</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder.tooltip = <i>Method builder</i> for <i>Excel sheet</i>.
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder.tooltip = <i>Method builder</i> creating <i>instance export</i> expressions.
 com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder = Builder
