Ticket #28265: Added pdf tile to tiles in technical demo.

--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.tiles.messages_de.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.tiles.messages_de.properties
@@ -3,6 +3,7 @@ model.test.tiles.Product = Produkt
 model.test.tiles.Product.description = Beschreibung
 model.test.tiles.Product.image = Bild
 model.test.tiles.Product.name = Name
+model.test.tiles.Product.pdf = PDF Dokument
 model.test.tiles.Product.releases = Releases
 model.test.tiles.Product.tickets = Tickets
 model.test.tiles.Release = Release
