--- a/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.tiles.messages_en.properties
+++ b/com.top_logic.demo/src/main/webapp/WEB-INF/conf/resources/model.test.tiles.messages_en.properties
@@ -3,6 +3,7 @@ model.test.tiles.Product = Product
 model.test.tiles.Product.description = Description
 model.test.tiles.Product.image = Image
 model.test.tiles.Product.name = Name
+model.test.tiles.Product.pdf = PDF document
 model.test.tiles.Product.releases = Releases
 model.test.tiles.Product.tickets = Tickets
 model.test.tiles.Release = Release
