--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -95,6 +95,7 @@ class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD
 class.com.top_logic.layout.basic.I18NConstants.FAILED_TO_COMPUTE_STATE__MSG = Der Status der Ausführbarkeit konnte nicht berechnet werden: {0}
 class.com.top_logic.layout.component.I18NConstants.DELETED_OBJECT__OBJ = Objekt gelöscht: {0}
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = Die Sicht wurde neu erstellt. Um die Sicht zu entfernen, verwenden Sie "Sicht löschen".
+class.com.top_logic.layout.component.I18NConstants.NO_CARDS_VISIBLE = Keine Karten sichtbar.
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = Die Sicht wurde nicht lokal verändert.
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = Keine solche Währung: {0}
 class.com.top_logic.layout.editor.commands.I18NConstants.ADDED_COMPONENT_TILE__NAME = Komponentenkachel hinzugefügt: {0}
@@ -266,6 +267,7 @@ class.com.top_logic.model.visit.I18NConstants.TYPE_TOOLTIP = <b>{0}:</b> {1} ({2
 class.com.top_logic.model.visit.I18NConstants.TYPE_TOOLTIP.help = Parameter: <ul> <li>Typ des Typs</li> <li>Name des Typs</li> <li>Name des Moduls</li> <li>ID des Typs</li> <li>Beschreibung</li> </ul>
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_MORE_ELEMENTS__ELEMENTS = Wollen Sie die Objekte "{0}" wirklich löschen?
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_ONE_ELEMENT__ELEMENT = Wollen Sie das Objekt "{0}" wirklich löschen?
+class.com.top_logic.tool.boundsec.config.I18NConstants.ACCESS_CONFIG_IMPORT = Import der Zugangskonfiguration.
 class.com.top_logic.tool.boundsec.gui.I18NConstants.ERROR_NOT_A_ROLE__ELEMENT = Das Objekt {0} ist keine Rolle.
 class.com.top_logic.util.I18NConstants.APPLICATION_STARTUP__NAME_VERSION = Start der Anwendung: {0} {1}
 class.com.top_logic.util.I18NConstants.CREATING_INITIAL_GROUPS_AND_ROLES = Erstellte Gruppen und Rollen.
@@ -7992,9 +7994,7 @@ com.top_logic.tool.boundsec.AbstractSystemCommand.tooltip = <i>Befehlshandler</i
 com.top_logic.tool.boundsec.BoundCheckerLayoutConfig = Konfiguration des Layouts für das Bound-Checker-Layout
 com.top_logic.tool.boundsec.BoundCheckerLayoutConfig.tooltip = Konfigurationsschnittstelle für <i>Komponenten</i>, die <i>den gebundenen Checker</i> implementieren.
 com.top_logic.tool.boundsec.BoundComponent = Gebundene Komponente
-com.top_logic.tool.boundsec.BoundComponent.Config.securityProviderClass = Berechnung des Berechtigungsobjekts
-com.top_logic.tool.boundsec.BoundComponent.Config.securityProviderClass.tooltip = Berechnungsvorschrift für das <i>Berechtigungsobjekt</i>, die festlegt, auf welchem Objekt die Berechtigungen überprüft werden.
-com.top_logic.tool.boundsec.BoundComponent.tooltip = Eine <i>Komponente</i>, die die Schnittstelle des <i>Bindungsprüfers</i> implementiert. Diese Implementierung ermöglicht die Zwischenspeicherung der Sicherheit <code>#allow(BoundCommandGroup, BoundObject)</code>, beachten Sie, dass dies nur korrekt ist, wenn das <i>Konto</i> / der <i>Kontext</i> immer derselbe ist.
+com.top_logic.tool.boundsec.BoundComponent.tooltip = Eine <i>Komponente</i>, die die Schnittstelle des <i>Bound Checkers</i> implementiert.
 com.top_logic.tool.boundsec.BoundHelper = Hilfsfunktionen für Zugriffssteuerung
 com.top_logic.tool.boundsec.BoundHelper.Config.use-default-security-parent = Standard-Berechtigungsobjekt verwenden
 com.top_logic.tool.boundsec.BoundHelper.Config.use-default-security-parent.tooltip = Ob das globale Berechtigungsobjekt standardmäßig als übergeordnetes Berechtigungsobjekt verwendet werden soll.
@@ -8193,7 +8193,6 @@ com.top_logic.tool.boundsec.assistent.AssistentStepInfo = Assistent Schritt Info
 com.top_logic.tool.boundsec.assistent.AssistentStepInfo.labelKeySuffix = Beschriftungsschlüssel-Suffix
 com.top_logic.tool.boundsec.assistent.AssistentStepInfo.tooltip = Metainformationen für Assistenzschritte werden hier gespeichert.
 com.top_logic.tool.boundsec.assistent.BoundAssistentComponent = Gebundene Assistenzkomponente
-com.top_logic.tool.boundsec.assistent.BoundAssistentComponent.Config.securityProviderClass = Klasse des Berechtigungsanbieters
 com.top_logic.tool.boundsec.assistent.BoundAssistentComponent.tooltip = Erweiterung der Assistenten-Komponente, um Berechtigungen zu prüfen.
 com.top_logic.tool.boundsec.assistent.CommandChain = Befehlskette
 com.top_logic.tool.boundsec.assistent.CommandChain.tooltip = Um mehr als einen Befehl während eines Schrittwechsels in der Assistenzkomponente auszuführen, z.B. den Schritt vorwärts und einen zusätzlichen Befehl.
@@ -8322,6 +8321,26 @@ com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.profi
 com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.tooltip = <i>Konfigurationselement</i> für die textuelle Persistenz der <i>Rollenprofil-Handler-Profile</i>, wie in der <i>Komponente Berechtigungsprofil bearbeiten</i> konfiguriert.
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler = Vorbedingung Befehlshandler
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler.tooltip = <i>Befehlshandler</i>, der nur ausgeführt werden kann, wenn einige interne Vorbedingungen gegeben sind.
+com.top_logic.tool.boundsec.config.AccessConfiguration = Zugangskonfiguration
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig = Profil-Konfiguration
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig = Konfiguration anzeigen
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig$CommandGroupRef = Referenz der Befehlsgruppe
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig$CommandGroupRef.tooltip = Verweis auf einen <i>Befehlsgruppennamen</i>.
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig.tooltip = Konfiguration für einen Teilbaum der Komponente.
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig.tooltip = Konfiguration für eine einzelne Rolle.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.CommandGroupRef.name = Name
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.CommandGroupRef.name.tooltip = Name der <i>Befehlsgruppe</i>, auf die der Zugriff gewährt wird.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.commandGroups = Befehlsgruppen
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.commandGroups.tooltip = Die Befehlsgruppen von Befehlen, die ausgeführt werden können, wenn der Benutzer die Rolle des Profils hat.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.name = Name
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.name.tooltip = Die Komponente, für die diese Konfiguration gilt. <p> Bei der Komponente muss es sich um ein <i>zusammengesetztes Sicherheitslayout</i> handeln, das eine Teilstruktur des Layouts der Anwendung gruppiert. </p>
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.name = Name
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.name.tooltip = Der Name der Rolle, die Zugang erhalten soll.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.views = Ansichten
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.views.tooltip = Die Ansichten der Anwendung, auf die die angegebene Rolle Zugriff erhalten soll.
+com.top_logic.tool.boundsec.config.AccessConfiguration.profiles = Profile
+com.top_logic.tool.boundsec.config.AccessConfiguration.profiles.tooltip = Zugriffskonfigurationen für bestimmte Rollen auflisten.
+com.top_logic.tool.boundsec.config.AccessConfiguration.tooltip = Konfiguration, die festlegt, welche Rollen ein Benutzer haben muss, um Befehle bestimmter Befehlsgruppen in verschiedenen Ansichten der Anwendung auszuführen.
 com.top_logic.tool.boundsec.confirm.CustomConfirmation = Benutzerdefinierte Bestätigung
 com.top_logic.tool.boundsec.confirm.CustomConfirmation.Config.confirmMessage = Bestätigungsnachricht
 com.top_logic.tool.boundsec.confirm.CustomConfirmation.Config.confirmMessage.tooltip = Die Nachricht, die dem Benutzer angezeigt werden soll, um zu bestätigen, dass der Befehl wirklich ausgeführt werden soll. <p> Die Nachricht kann sich auf das Zielmodell des Befehls beziehen, indem der Platzhalter <code>{0}</code> verwendet wird. </p> <p> Wird keine Nachricht angegeben, wird eine Standardbestätigungsnachricht angezeigt. </p>
@@ -8376,6 +8395,8 @@ com.top_logic.tool.boundsec.securityObjectProvider.ConfiguredModelSecurityProvid
 com.top_logic.tool.boundsec.securityObjectProvider.ConfiguredModelSecurityProvider.tooltip = Berechnungsvorschrift, die ein konfiguriertes Modell als Berechtigungsobjekt verwendet.
 com.top_logic.tool.boundsec.securityObjectProvider.ModelSecurityObjectProvider = Aktuelles Modell
 com.top_logic.tool.boundsec.securityObjectProvider.ModelSecurityObjectProvider.tooltip = <i>Berechnung des Berechtigungsobjekts</i>, das das aktuelle Modell als Berechtigungsobjekt verwendet.
+com.top_logic.tool.boundsec.securityObjectProvider.NullSecurityObjectProvider = Keine Zugriffskontrolle
+com.top_logic.tool.boundsec.securityObjectProvider.NullSecurityObjectProvider.tooltip = Bietet kein Objekt für den Sicherheitskontext an, wodurch die Zugriffsprüfungen effektiv deaktiviert werden.
 com.top_logic.tool.boundsec.securityObjectProvider.PathSecurityObjectProvider = Berechnung eines Berechtigungsobjekts über einen Pfadausdruck
 com.top_logic.tool.boundsec.securityObjectProvider.PathSecurityObjectProvider.Config.path = Pfad
 com.top_logic.tool.boundsec.securityObjectProvider.PathSecurityObjectProvider.Config.path.tooltip = Der Pfad, über den das Berechtigungsobjekt gefunden wird.
