Ticket #28927: Update documentation and add I18NConstants.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -19,9 +19,11 @@ class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_INVALID_CONFIGURATION_TYPE__NAME_EXPECTED = Ungültiger Konfigurationstyp ''{0}'', muss ein Subtyp von ''{1}'' sein.
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_NO_SUCH_CONFIGURATION_TYPE__NAME = Der angegebene Konfigurationstyp ''{0}'' existiert nicht.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = In "{1}" werden Binäre Daten erwartet, erhalten wurde aber "{0}".
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CELL_CONFLICT = Zelle bei "{0}" kann nicht erstellt werden - sie befindet sich innerhalb der bestehenden zusammengefassten Region "{1}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Umwandlung in "{1}" fehlgeschlagen: {0}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Kopfzeilen sollten in der gleichen Zeile "{1}" sein, aber "{0}" bekommen.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Ungültiger Inhaltstyp "{0}" angegeben: {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_STYLE_ATTRIBUTE = Ungültiges Stil-Attribut.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Der angegebene Inhaltstyp "{0}" wird nicht unterstützt.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Die Daten aus "{0}" konnten nicht entpackt werden: {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE = Instanzimport der Datei "{0}" fehlgeschlagen.
@@ -653,6 +655,8 @@ com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder = 
 com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Formeln</i>.
 com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder = Erbauer
 com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Tabellen</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelStyle$Builder = Erbauer
+com.top_logic.model.search.expr.config.operations.binary.ExcelStyle$Builder.tooltip = <i>Erbauer von Methoden</i> für <i>Excel-Stil</i>.
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder = Ersteller
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder.tooltip = <i>Erbauer</i> von <i>Methoden</i> zur Erstellung von <i>Instanz-Export-Ausdrücken</i>.
 com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder = Ersteller
