--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -19,9 +19,11 @@ class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_INVALID_CONFIGURATION_TYPE__NAME_EXPECTED = Invalid configuration type ''{0}'', must be a sub-type of ''{1}''.
 class.com.top_logic.model.search.expr.config.operations.app.I18NConstants.ERROR_NO_SUCH_CONFIGURATION_TYPE__NAME = The given configuration type ''{0}'' does not exist.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_BINARY_DATA_EXPECTED__ACTUAL_EXPR = Binary data expected in "{1}" but got "{0}".
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CELL_CONFLICT = Cannot create cell at "{0}" - it is within existing merged region "{1}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_CONVERSION_FAILED__MSG_EXPR = Conversion in "{1}" failed: {0}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CELL_ENTRY__VALUE_MSG = Headers should be in the same row "{1}" but got "{0}".
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_CONTENT_TYPE_SPECIFIED__VALUE_MSG = Invalid content type "{0}" specified: {1}
+class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_INVALID_STYLE_ATTRIBUTE = Invalid style attribute.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNSUPPORTED_CONTENT_TYPE__VALUE_MSG = Given content type "{0}" is not supported.
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.ERROR_UNZIP_FAILED__NAME_MSG = Failed to unzip data from "{0}": {1}
 class.com.top_logic.model.search.expr.config.operations.binary.I18NConstants.INSTANCE_IMPORT_FAILED__FILE = Instance import of file "{0}" failed.
@@ -653,6 +655,8 @@ com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder = 
 com.top_logic.model.search.expr.config.operations.binary.ExcelFormula$Builder.tooltip = <i>Method builder</i> for <i>Excel formula</i>.
 com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.ExcelSheet$Builder.tooltip = <i>Method builder</i> for <i>Excel sheet</i>.
+com.top_logic.model.search.expr.config.operations.binary.ExcelStyle$Builder = Builder
+com.top_logic.model.search.expr.config.operations.binary.ExcelStyle$Builder.tooltip = <i>Method builder</i> for <i>Excel style</i>.
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder = Builder
 com.top_logic.model.search.expr.config.operations.binary.InstanceExport$Builder.tooltip = <i>Method builder</i> creating <i>instance export</i> expressions.
 com.top_logic.model.search.expr.config.operations.binary.InstanceImport$Builder = Builder
