--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -95,6 +95,7 @@ class.com.top_logic.layout.basic.I18NConstants.ERROR_UPDATING_EXECUTABILITY__CMD
 class.com.top_logic.layout.basic.I18NConstants.FAILED_TO_COMPUTE_STATE__MSG = Failed to compute executability state: {0}
 class.com.top_logic.layout.component.I18NConstants.DELETED_OBJECT__OBJ = Deleted object: {0}
 class.com.top_logic.layout.component.I18NConstants.NEW_LAYOUT = The view was newly created. To remove the view use "delete view".
+class.com.top_logic.layout.component.I18NConstants.NO_CARDS_VISIBLE = No cards visible.
 class.com.top_logic.layout.component.I18NConstants.NO_PERSONAL_LAYOUT = The view has not been locally modified.
 class.com.top_logic.layout.currency.I18NConstants.ERROR_NO_SUCH_CURRENCY__VALUE = No such currency: {0}
 class.com.top_logic.layout.editor.commands.I18NConstants.ADDED_COMPONENT_TILE__NAME = Added component tile: {0}
@@ -266,6 +267,7 @@ class.com.top_logic.model.visit.I18NConstants.TYPE_TOOLTIP = <b>{0}:</b> {1} ({2
 class.com.top_logic.model.visit.I18NConstants.TYPE_TOOLTIP.help = Parameters: <ul> <li>Typ des Typs</li> <li>Name des Typs</li> <li>Name des Moduls</li> <li>ID des Typs</li> <li>Beschreibung</li> </ul>
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_MORE_ELEMENTS__ELEMENTS = Do you really want to delete the objects "{0}"?
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_ONE_ELEMENT__ELEMENT = Do you really want to delete the object "{0}"?
+class.com.top_logic.tool.boundsec.config.I18NConstants.ACCESS_CONFIG_IMPORT = Import of access configuration.
 class.com.top_logic.tool.boundsec.gui.I18NConstants.ERROR_NOT_A_ROLE__ELEMENT = The object {0} is not a role.
 class.com.top_logic.util.I18NConstants.APPLICATION_STARTUP__NAME_VERSION = Application startup: {0} {1}
 class.com.top_logic.util.I18NConstants.CREATING_INITIAL_GROUPS_AND_ROLES = Created groups and roles.
@@ -7992,9 +7994,7 @@ com.top_logic.tool.boundsec.AbstractSystemCommand.tooltip = <i>Command handler</
 com.top_logic.tool.boundsec.BoundCheckerLayoutConfig = Bound checker layout configuration
 com.top_logic.tool.boundsec.BoundCheckerLayoutConfig.tooltip = Configuration interface for <i>component</i> that implement <i>bound checker</i>.
 com.top_logic.tool.boundsec.BoundComponent = Bound component
-com.top_logic.tool.boundsec.BoundComponent.Config.securityProviderClass = Security provider class
-com.top_logic.tool.boundsec.BoundComponent.Config.securityProviderClass.tooltip = The name of the <i>security object provider</i> which defines on which object the security will be checked.
-com.top_logic.tool.boundsec.BoundComponent.tooltip = A <i>component</i> implementing the <i>bound checker</i> interface. This implementation allows caching of the Security <code>#allow(BoundCommandGroup, BoundObject)</code>, be aware that this will be correct only if the <i>account</i> / <i>context</i> is always the same.
+com.top_logic.tool.boundsec.BoundComponent.tooltip = A <i>component</i> implementing the <i>bound checker</i> interface.
 com.top_logic.tool.boundsec.BoundHelper = Bound helper
 com.top_logic.tool.boundsec.BoundHelper.Config.use-default-security-parent = Use default security parent
 com.top_logic.tool.boundsec.BoundHelper.Config.use-default-security-parent.tooltip = Whether to use the global default object as security parent by default.
@@ -8191,7 +8191,6 @@ com.top_logic.tool.boundsec.assistent.AssistentStepInfo = Assistent step info
 com.top_logic.tool.boundsec.assistent.AssistentStepInfo.labelKeySuffix = Label key suffix
 com.top_logic.tool.boundsec.assistent.AssistentStepInfo.tooltip = Metainformation for assistent steps are stored here.
 com.top_logic.tool.boundsec.assistent.BoundAssistentComponent = Bound assistent component
-com.top_logic.tool.boundsec.assistent.BoundAssistentComponent.Config.securityProviderClass = Security provider class
 com.top_logic.tool.boundsec.assistent.BoundAssistentComponent.tooltip = Extension of AssistentComponent making it security aware.
 com.top_logic.tool.boundsec.assistent.CommandChain = Command chain
 com.top_logic.tool.boundsec.assistent.CommandChain.tooltip = To perform more than one command during a step switch in the assistentComponent. e.g. the step forward and a addional command.
@@ -8320,6 +8319,26 @@ com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.profi
 com.top_logic.tool.boundsec.compound.gui.admin.rolesProfile.SecurityConfig.tooltip = <i>Configuration item</i> for the textual persistence of the <i>roles profile handler</i> profiles as configured in the <i>edit security profile component</i>.
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler = Precondition command handler
 com.top_logic.tool.boundsec.conditional.PreconditionCommandHandler.tooltip = <i>Command handler</i> that can only be executed if some internal preconditions are given.
+com.top_logic.tool.boundsec.config.AccessConfiguration = Access configuration
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig = Profile configuration
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig = View configuration
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig$CommandGroupRef = Command group reference
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig$CommandGroupRef.tooltip = Reference to a <i>command group</i> name.
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig$ViewConfig.tooltip = Configuration for a component subtree.
+com.top_logic.tool.boundsec.config.AccessConfiguration$ProfileConfig.tooltip = Configuration for a single role.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.CommandGroupRef.name = Name
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.CommandGroupRef.name.tooltip = Name of the <i>command group</i> to which access is granted.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.commandGroups = Command groups
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.commandGroups.tooltip = The command groups of commands that can be executed, if the user has the profile's role.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.name = Name
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.ViewConfig.name.tooltip = The component this configuration applies to. <p> The component must be a <i>compound security layout</i> grouping a substructure of the application's layout. </p>
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.name = Name
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.name.tooltip = The name of the role that should get access.
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.views = Views
+com.top_logic.tool.boundsec.config.AccessConfiguration.ProfileConfig.views.tooltip = The application's views the given role should get access to.
+com.top_logic.tool.boundsec.config.AccessConfiguration.profiles = Profiles
+com.top_logic.tool.boundsec.config.AccessConfiguration.profiles.tooltip = List access configurations for certain roles.
+com.top_logic.tool.boundsec.config.AccessConfiguration.tooltip = Configuration that specifies the roles a user must have to execute commands of certain command groups on various views of the application.
 com.top_logic.tool.boundsec.confirm.CustomConfirmation = Custom confirmation
 com.top_logic.tool.boundsec.confirm.CustomConfirmation.Config.confirmMessage = Confirm message
 com.top_logic.tool.boundsec.confirm.CustomConfirmation.Config.confirmMessage.tooltip = The message to display to the user requesting for confirmation that the command should really be executed. <p> The message can refer to the target model of the command using the <code>{0}</code> placeholder. </p> <p> If no message is specified, a default confirmation message is shown. </p>
@@ -8374,6 +8393,8 @@ com.top_logic.tool.boundsec.securityObjectProvider.ConfiguredModelSecurityProvid
 com.top_logic.tool.boundsec.securityObjectProvider.ConfiguredModelSecurityProvider.tooltip = <i>Security object provider</i> that uses a configured model as security object.
 com.top_logic.tool.boundsec.securityObjectProvider.ModelSecurityObjectProvider = Current model
 com.top_logic.tool.boundsec.securityObjectProvider.ModelSecurityObjectProvider.tooltip = <i>Security object provider</i> that uses the current model as security object.
+com.top_logic.tool.boundsec.securityObjectProvider.NullSecurityObjectProvider = No access checks
+com.top_logic.tool.boundsec.securityObjectProvider.NullSecurityObjectProvider.tooltip = Provides no security context object, effectively disabling access checks.
 com.top_logic.tool.boundsec.securityObjectProvider.PathSecurityObjectProvider = Path security object provider
 com.top_logic.tool.boundsec.securityObjectProvider.PathSecurityObjectProvider.Config.path = Path
 com.top_logic.tool.boundsec.securityObjectProvider.PathSecurityObjectProvider.Config.path.tooltip = The path to navigate.
