Ticket #28937: Allow creating delegating command approval rules.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_en.properties
@@ -1066,6 +1066,12 @@ com.top_logic.model.search.providers.DefaultByExpression.Config.in-transaction.t
 com.top_logic.model.search.providers.DefaultByExpression.Config.value = Value
 com.top_logic.model.search.providers.DefaultByExpression.Config.value.tooltip = Function computing the default value for the annotated attribute. <p> The function is expected to accept the context object of the newly created object as single argument. The context object of the new object is passed to the <code>new</code> function at the location, where the object is created. In tree structures, the context object is typically the parent node of the newly created node. </p>
 com.top_logic.model.search.providers.DefaultByExpression.tooltip = <i>Default value computation</i> retrieving the default value from an expression.
+com.top_logic.model.search.providers.DelegationApprovalRule = Delegation approval rule
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.command-group = Command group
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.command-group.tooltip = The other <i>command group</i> to check. <p> If not given, the original group is checked. </p>
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.transformation = Transformation
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.transformation.tooltip = Function taking the target model as single argument and computing another object on which the check should take place.
+com.top_logic.model.search.providers.DelegationApprovalRule.tooltip = <i>Command approval rule</i> that delegates to another check.
 com.top_logic.model.search.providers.DownloadNameByExpression = Download name by expression
 com.top_logic.model.search.providers.DownloadNameByExpression.Config.expr = Expression
 com.top_logic.model.search.providers.DownloadNameByExpression.Config.expr.tooltip = Function computing the download-name for a <i>Model</i> object. <p> The function is expected to take the <i>Model</i> object as argument and return a file name for the given object. The computed name can either be a literal <i>string</i> value or a <i>resource key</i> for internationalization. </p> <p> The computed value is passed as single argument value to the configured <i>Download name template</i>. </p>
