Ticket #28937: Allow creating delegating command approval rules.

--- a/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.model.search/src/main/java/META-INF/messages_de.properties
@@ -925,6 +925,12 @@ com.top_logic.model.search.providers.DefaultByExpression.Config.in-transaction.t
 com.top_logic.model.search.providers.DefaultByExpression.Config.value = Wert
 com.top_logic.model.search.providers.DefaultByExpression.Config.value.tooltip = Funktion, die den Standardwert für das annotierte Attribut berechnet. <p> Es wird erwartet, dass die Funktion das Kontextobjekt des neu erstellten Objekts als einziges Argument akzeptiert. Das Kontextobjekt des neuen Objekts wird an die Funktion <code>new</code> an der Stelle übergeben, an der das Objekt erstellt wird. In Baumstrukturen ist das Kontextobjekt typischerweise der übergeordnete Knoten des neu angelegten Knotens. </p>
 com.top_logic.model.search.providers.DefaultByExpression.tooltip = <i>Standardwertberechnung</i>, die den Standardwert aus einem Ausdruck abruft.
+com.top_logic.model.search.providers.DelegationApprovalRule = Delegierte Genehmigungsregel
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.command-group = Befehlsgruppe
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.command-group.tooltip = Die andere zu prüfende <i>Befehlsgruppe</i>. <p> Wird sie nicht angegeben, wird die ursprüngliche Gruppe geprüft. </p>
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.transformation = Transformation
+com.top_logic.model.search.providers.DelegationApprovalRule.Config.transformation.tooltip = Funktion, die das Zielmodell als einziges Argument nimmt und ein anderes Objekt berechnet, auf dem die Prüfung stattfinden soll.
+com.top_logic.model.search.providers.DelegationApprovalRule.tooltip = <i>Befehlsgenehmigungsregel</i>, die an eine andere Prüfung delegiert.
 com.top_logic.model.search.providers.DownloadNameByExpression = Dateiname über TL-Script
 com.top_logic.model.search.providers.DownloadNameByExpression.Config.expr = Ausdruck
 com.top_logic.model.search.providers.DownloadNameByExpression.Config.expr.tooltip = Funktion, die den Download-Namen für ein <i>Model-Objekt</i> berechnet. <p> Die Funktion soll das <i>Model-Objekt</i> als Argument nehmen und einen Dateinamen für das gegebene Objekt zurückgeben. Der berechnete Name kann entweder ein literaler <i>String-Wert</i> oder ein <i>Ressourcenschlüssel</i> für die Internationalisierung sein. </p> <p> Der berechnete Wert wird als Einzelargument an die konfigurierte <i>Vorlage für den Download-Namen</i> übergeben. </p>
