Ticket #28931: Added common interface for inApp configuration of security layouts.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -8025,6 +8025,10 @@ com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.com
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl = Umsetzung
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl.tooltip = Die Berechnung des <i>Berechtigungsobjekts</i>, die für die Befehlsgruppe mit der angegebenen ID verwendet wird.
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.tooltip = Berechnung von <i>Berechtigungsobjektes</i>, die je nach <i>Befehlsgruppe</i> an verschiedene Berechnungen von <i>Berechtigungsobjekten</i> delegiert.
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.helpID = Hilfe-Seite ermöglichen
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.helpID.tooltip = Wenn diese Eigenschaft gesetzt ist, kann für die Sicht eine Hilfe-Seite erzeugt werden.
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.securityDomain = Berechtigungsstruktur
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.securityDomain.tooltip = Der Name der Berechtigungsstruktur, für die Konfigurationsoptionen angeboten werden.
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration = Layout-Berechtigungskonfiguration
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector = Sammler
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector.tooltip = Konfiguration des Kollektors zum Sammeln der <i>Befehlsgruppe</i> für das Layout.
@@ -8186,7 +8190,7 @@ com.top_logic.tool.boundsec.commandhandlers.stacked.StackedGotoHandler.Config.ex
 com.top_logic.tool.boundsec.commandhandlers.stacked.StackedGotoHandler.Config.exclude-layouts.tooltip = Die Layouts, die gestapelt werden können.
 com.top_logic.tool.boundsec.commandhandlers.stacked.StackedGotoHandler.tooltip = Überschreiben Sie den Standard-GotoHandler, um mit dem <i>Stack-Handler</i> zu kooperieren.
 com.top_logic.tool.boundsec.compound.CompoundSecurityLayout = Zusammengesetztes Berechtigungslayout
-com.top_logic.tool.boundsec.compound.CompoundSecurityLayout.Config.securityDomain = Bereich Sicherheit
+com.top_logic.tool.boundsec.compound.CompoundSecurityLayout.Config.securityDomain = Berechtigungsstruktur
 com.top_logic.tool.boundsec.compound.CompoundSecurityLayout.Config.useDefaultChecker = Standard-Prüfer verwenden
 com.top_logic.tool.boundsec.compound.CompoundSecurityLayout.tooltip = Ein CompoundSecurityLayout bietet eine logische Darstellung einer technischen Sicht. Es strukturiert die Teile der Layouts in logische Gruppen, wie sie vom Benutzer erlebt werden. Das BoundSecurityLayout ist zu feinkörnig (hat zu viele Verschachtelungsebenen). Das CompoundSecurityLayout erlaubt es, die Sicherheit für eine Gruppe von Komponenten zu definieren.
 com.top_logic.tool.boundsec.compound.CompoundSecurityProjectLayout = Verbundberechtigungsprojekt-Layout
