--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -8025,6 +8025,10 @@ com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.com
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl = Implementation
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.ProviderConfig.impl.tooltip = The <i>security object provider</i> that is used for the command group with given id.
 com.top_logic.tool.boundsec.DispatchingSecurityObjectProvider.tooltip = <i>Security object provider</i> delegating to different <i>security object provider</i> depending on the <i>command group</i>.
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.helpID = Enable help
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.helpID.tooltip = If this property is set, a help page can be generated for the view.
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.securityDomain = Security domain
+com.top_logic.tool.boundsec.InAppSecurityLayoutConfig.securityDomain.tooltip = The name of the security structure for which configuration options are offered.
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration = Layout security configuration
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector = Collector
 com.top_logic.tool.boundsec.LayoutSecurityConfiguration.collector.tooltip = Configuration of the collector to collect <i>command group</i> for the layout.
