Ticket #28931: Support security delegation.

--- a/com.top_logic/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_de.properties
@@ -269,6 +269,7 @@ class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_MORE_ELEMENTS__EL
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_ONE_ELEMENT__ELEMENT = Wollen Sie das Objekt "{0}" wirklich löschen?
 class.com.top_logic.tool.boundsec.config.I18NConstants.ACCESS_CONFIG_IMPORT = Import der Zugangskonfiguration.
 class.com.top_logic.tool.boundsec.gui.I18NConstants.ERROR_NOT_A_ROLE__ELEMENT = Das Objekt {0} ist keine Rolle.
+class.com.top_logic.tool.boundsec.gui.profile.I18NConstants.COMPUTED_FROM__SOURCE = Berechnet von: {0}
 class.com.top_logic.util.I18NConstants.APPLICATION_STARTUP__NAME_VERSION = Start der Anwendung: {0} {1}
 class.com.top_logic.util.I18NConstants.CREATING_INITIAL_GROUPS_AND_ROLES = Erstellte Gruppen und Rollen.
 class.com.top_logic.util.I18NConstants.INITIALIZING_LAYOUT_BASED_SECURITY = Initialisierte Ansichtsberechtigungen.
