--- a/com.top_logic/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic/src/main/java/META-INF/messages_en.properties
@@ -269,6 +269,7 @@ class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_MORE_ELEMENTS__EL
 class.com.top_logic.tool.boundsec.I18NConstants.CONFIRM_DELETE_ONE_ELEMENT__ELEMENT = Do you really want to delete the object "{0}"?
 class.com.top_logic.tool.boundsec.config.I18NConstants.ACCESS_CONFIG_IMPORT = Import of access configuration.
 class.com.top_logic.tool.boundsec.gui.I18NConstants.ERROR_NOT_A_ROLE__ELEMENT = The object {0} is not a role.
+class.com.top_logic.tool.boundsec.gui.profile.I18NConstants.COMPUTED_FROM__SOURCE = Computed from: {0}
 class.com.top_logic.util.I18NConstants.APPLICATION_STARTUP__NAME_VERSION = Application startup: {0} {1}
 class.com.top_logic.util.I18NConstants.CREATING_INITIAL_GROUPS_AND_ROLES = Created groups and roles.
 class.com.top_logic.util.I18NConstants.INITIALIZING_LAYOUT_BASED_SECURITY = Initialized view permissions.
