Ticket #28947: Replaced deprecated implementation.

--- a/com.top_logic.element/src/main/java/META-INF/messages_de.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_de.properties
@@ -45,6 +45,9 @@ class.com.top_logic.element.layout.meta.search.quick.I18NConstants.NO_RESULTS = 
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.SEARCH_STRING_TOO_SHORT__MIN = Die Sucheingabe erfordert mindestens {0} Zeichen.
 class.com.top_logic.element.layout.structured.I18NConstants.ERROR_NOT_A_STRUCTURED_ELEMENT__ELEMENT = Das Objekt {0} ist kein strukturiertes Element.
 class.com.top_logic.element.layout.tree.I18NConstants.DROP_OPERATION = Fallenlassen im Baum.
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_HEADER = Neues Element anlegen
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_MESSAGE = Wählen Sie den Typ des anzulegenden Objektes aus
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_TITLE = Neues Element
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.DETAIL_OPENER = Detail Öffner
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.EDIT_DETAILS_TITLE__TYPE = Details von {0} bearbeiten
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = Keine Annotation des Modelltyps bei Attribut "{0}" gefunden.
