--- a/com.top_logic.element/src/main/java/META-INF/messages_en.properties
+++ b/com.top_logic.element/src/main/java/META-INF/messages_en.properties
@@ -45,6 +45,9 @@ class.com.top_logic.element.layout.meta.search.quick.I18NConstants.NO_RESULTS = 
 class.com.top_logic.element.layout.meta.search.quick.I18NConstants.SEARCH_STRING_TOO_SHORT__MIN = Search entry requires at least {0} characters.
 class.com.top_logic.element.layout.structured.I18NConstants.ERROR_NOT_A_STRUCTURED_ELEMENT__ELEMENT = The object {0} is not a structured element.
 class.com.top_logic.element.layout.tree.I18NConstants.DROP_OPERATION = Drop operation on tree.
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_HEADER = Create new element
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_MESSAGE = Select the type of object you want to create
+class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.CREATE_COMPOSITION_ROW_TITLE = New element
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.DETAIL_OPENER = Detail opener
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.EDIT_DETAILS_TITLE__TYPE = Edit details of {0}
 class.com.top_logic.element.meta.form.fieldprovider.I18NConstants.MISSING_TYPE_COMPUTATION__ATTRIBUTE = No model type annotation found at attribute "{0}".
